--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Riot - open team collaboration",
-    "short_name": "Riot",
+    "name": "Otau",
+    "short_name": "Otau",
     "display": "standalone",
     "theme_color": "#76CFA6",
     "start_url": "index.html",
